# rocket-app

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Rocket.toml  Session.vim
devops/: rocket-app.service
src/: auth.rs  main.rs  models.rs  repositories.rs
