[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket ={ version="0.5.0-rc.3", features = ["json"] }
serde ={ version =  "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
diesel = { version = "2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0"

# rocket_sync_db_pools = { version = "0.5.0-rc.3", features = ["diesel_sqlite"] }
[dependencies.rocket_sync_db_pools]
version = "=0.1.0-rc.3"
features = ["diesel_sqlite_pool"]
